Tue Jun 30 00:25:13 1992  Linus Tolke Y  (linus@robin)

	* swedish-strings.el (lyskom-mode-map): kom-review-noconversion
	  put on }o.

Wed Jun 17 21:33:24 1992  Linus Tolke Y  (linus at lysator)

	* vars.el (lyskom-global-boolean-variables): added 
	  kom-confirm-multiple-recipients.

Tue Jun 16 00:34:42 1992  Linus Tolke Y  (linus@robin)

	* commands2.el, completing-read.el, edit-text.el, lyskom-rest.el
	  (keymaps are no longer always arrays): Works no for lucid-emacs.

Sat Jun 13 18:50:21 1992  Linus Tolke Y  (linus@robert)

	* swedish-string.el (*-mode-map): replaced 
	  (fset 'name-of-map (make-keymap)) with 
	  (define-prefix-command 'name-of-map)

	* startup.el, swedish-strings.el (lyskom-start-anew-login-2): A
	  text encouraging people that login to write presentations if
	  they don't have any and have written a text.

	* swedish-strings.el (kom-review-noconversion): Show last or given
	  text without the iso-to-swascii conversion. ]terse omodifierat

	* commands2.el, async.el (lyskom-handle-as-personal-message,
	  lyskom-insert-personal-message, lyskom-send-message-2): No beep
	  when I sent the message.

	* async.el (lyskom-parse-async): Broadcasts should not use the
	  follow queue.

	* commands1.el (lyskom-private-answer-soon,
	  lyskom-private-answer): If a number of a non-existant text is
	  supplied to the private-answer this is caught.

Mon May 11 03:50:07 1992  Linus Tolke Y  (linus@robin)

	* swedish-strings.el (kom-slow-mode, kom-quick-mode,
	  kom-slow-mode-map, lyskom-parse-command-and-execute): New
	  command-giving mode for the swedish-client. Commands can be
	  typed in and are parsed when return is pressed. No arguments can
	  yet be given in this way!

	* startup.el (lyskom-mode): LysKOM-buffer no longer in read-only
	  mode.

	* clienttypes.el, cache.el, view-text.el (textpointers): removed
	  the special pointer-representation of the texts. They are now
	  deleted from the cache when read.
