@@ -1,3 +1,10 @@
+Sun Jul  5 05:02:37 1992  Linus Tolke Y  (linus@lysator)
+
+	* review.el (lyskom-review-by-to): Fixed the bug that made the
+	  function sometimes miss articles. 
+	  Optimized so that searching from the end, stopped when found the
+	  first article in a conf or that a person wrote.
+
 Tue Jun 30 00:25:13 1992  Linus Tolke Y  (linus@robin)
 
 	* swedish-strings.el (lyskom-mode-map): kom-review-noconversion
